# ClawStack

./: .cursorrules  .env.example  .gitignore  CONTRIBUTING  LICENSE  Makefile  README.md  SKILL-AUTHORING.md  docker-compose.yml
.claude/: settings.local.json
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  skill_submission.md
.github/workflows/: ci.yml  deploy.yml
.nemoclaw/: inference-profile.yaml  openshell.yaml
.openclaw/: AGENTS.md  HEARTBEAT.md  SOUL.md  config.json  openclaw.json
.openclaw/agents/log-watcher/: AGENT.md
.openclaw/agents/skill-maintainer/: AGENT.md
.openclaw/agents/test-runner/: AGENT.md
.openclaw/skills/db-migrate/: SKILL.md
.openclaw/skills/deploy/: SKILL.md
.openclaw/skills/dev-server/: SKILL.md
.openclaw/skills/find-skills/: SKILL.md
.openclaw/skills/git-workflow/: SKILL.md
.openclaw/skills/scaffold/: SKILL.md
.openclaw/skills/test/: SKILL.md
.skills/: AI-INTEGRATION.md  BACKEND.md  DATABASE.md  DEPLOY.md  FRONTEND.md  PROJECT.md
.skills/auth/: SKILL.md
.skills/db-migrate/: SKILL.md
.skills/deploy/: SKILL.md
.skills/dev-server/: SKILL.md
.skills/find-skills/: SKILL.md
.skills/generate-skills/: SKILL.md
.skills/git-workflow/: SKILL.md
.skills/model-routing/: SKILL.md
.skills/scaffold/: SKILL.md
.skills/test/: SKILL.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  logging_config.py  main.py  rate_limit.py
backend/app/cli/: __main__.py  seed.py
backend/app/middleware/: auth.py  logging.py
backend/app/models/: __init__.py  base.py  item.py  user.py
backend/app/routes/: auth.py  health.py  items.py  stream.py
backend/app/schemas/: health.py  item.py  user.py
backend/app/services/: item.py  user.py
backend/app/worker/: settings.py  tasks.py
backend/migrations/: env.py
backend/migrations/versions/: 2026_03_17_0001-001_initial_items_table.py  2026_03_18_0001-002_add_users_table_and_items_user_fk.py
backend/scripts/: export_openapi.py
backend/tests/: conftest.py  test_auth.py  test_health.py  test_items.py
cli/: package.json
cli/test/: cli.test.js
db/: seed.py
docs/: faq.md  tutorial.md
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/tests/: App.test.tsx  setup.ts
infra/: main.tf  outputs.tf  variables.tf
scripts/: deploy-init.sh  deploy.sh  init.py  preflight.sh
tests/: test_init.py
(+51 files in other folders)
